# waveform-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md
benches/: render.rs
examples/: benchmark.rs  benchmark.rs.bk  binned.rs  multi.rs  test.rs  waveform.rs  waveform.rs.bk
src/: binned.rs  direct.rs  direct.rs.bk  error.rs  lib.rs  lib.rs.bk  misc.rs  multi.rs  ocl_kernel.c  zero.rs
src/macros/: mod.rs  pixel.rs  segment_for.rs
