[package]
name = "waveform"
version = "0.2.0"
authors = ["tdgne"]
description = "Audio waveform image renderers"
repository = "https://github.com/tdgne/waveform-rs"
categories = ["multimedia::audio", "multimedia::images", "visualization"]
keywords = ["signal", "wave", "sound", "image", "raster"]
readme = "README.md"
license-file = "LICENCE"

[features]
default = ["rlibc"]

[dependencies]
rlibc = {version = "1.0.0", optional = true}

[dev-dependencies]
gtk = "0.1.3"
gdk-pixbuf = "0.1.3"
