[package]
name = "waveform"
version = "0.3.2"
authors = ["tdgne"]
description = "Audio waveform image renderers"
repository = "https://github.com/tdgne/waveform-rs"
categories = ["multimedia::audio", "multimedia::images", "visualization"]
keywords = ["signal", "wave", "sound", "image", "raster"]
readme = "README.md"
license = "Apache-2.0/MIT"

[features]
default = ["rlibc"]
example-gui = ["gtk", "gdk-pixbuf"]

[dependencies]
rlibc = {version = "1.0.0", optional = true}
gtk = {version = "0.1.3", optional = true}
gdk-pixbuf = {version = "0.1.3", optional = true}

